[core] fix: improve contrast for disabled inputs in iOS (#5641)

--- a/packages/core/src/components/forms/_input.scss
+++ b/packages/core/src/components/forms/_input.scss
@@ -58,6 +58,23 @@ Styleguide input
   }
 }
 
+// for iOS support
+@supports (-webkit-touch-callout: none) {
+  // only html input elements require a fix on iOS
+  input.#{$ns}-input {
+    &:disabled,
+    &.#{$ns}-disabled {
+      opacity: 1;
+      -webkit-text-fill-color: $input-color-disabled;
+
+      .#{$ns}-dark & {
+        -webkit-text-fill-color: $dark-input-color-disabled;
+      }
+    }
+  }
+}
+
+
 /*
 Search inputs
 
